--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/lenzlaww/RepositoryOf316Copy#readme",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "mongodb": "^6.2.0"
+    "express": "^4.18.2",
+    "mongodb": "^7.5.1"
   }
 }
